feat: add check whether the current user can operate the resources